unpackaged/main/default/objects/Agency__c/fields/AgencyManager__c.field-meta.xml
<CustomField>
    <fullName>AgencyManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AgencyManager</relationshipName>
    <type>Lookup</type>
</CustomField>