unpackaged/main/default/objects/Agency__c/fields/SalesPlannerPS__c.field-meta.xml
<CustomField>
    <fullName>SalesPlannerPS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Planner PS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agencies1</relationshipName>
    <type>Lookup</type>
</CustomField>