unpackaged/main/default/objects/Agency__c/fields/SrcManager__c.field-meta.xml
<CustomField>
    <fullName>SrcManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SRC Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>