unpackaged/main/default/objects/Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Agency__c</columns>
    <columns>NAME</columns>
    <columns>AgencyManager__c</columns>
    <columns>API_Code__c</columns>
    <columns>SalesManager__c</columns>
    <columns>SalesPlanner__c</columns>
    <columns>SalesPlannerPS__c</columns>
    <columns>SrcManager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>